--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    
+    "generate-types": "supabase gen types typescript --project-id apggdwllplyjrcfhvtpz > database.types.ts"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.5.0",
@@ -32,7 +33,8 @@
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "@types/node": "^20",
