--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    
     "generate-types": "supabase gen types typescript --project-id apggdwllplyjrcfhvtpz > database.types.ts"
   },
   "dependencies": {
@@ -25,10 +24,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-class-names": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.5",
+    "install": "^0.13.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
-     
+    "npm": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
